--- a/index.html
+++ b/index.html
@@ -1,55 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>800MHz</title>
 
-    <link rel="stylesheet" href="assets/css/Style.css">
+    <link rel="stylesheet" href="assets/lib/bs/css/bootstrap.css" />
+    <link rel="stylesheet" href="assets/css/Style.css" />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarsExampleDefault"
+        aria-controls="navbarsExampleDefault"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-</head>
-<body>
-    <header>
-        <div class="logo-container">
-            <img src="assets/img/placeholder_blue.png" alt="placeholder">
+      <div class="collapse navbar-collapse" id="">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#Home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#About">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#Contact">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <main role="main">
+      <div class="jumbotron mt-0 mb-0 pt-4 pb-4">
+        <div class="container d-flex" id="Home">
+          <div class="logo-lg d-flex flex-wrap">
+            <div class="empty"></div>
+            <div class="bg-blue"></div>
+            <div class="bg-indigo"></div>
+            <div class="bg-purple"></div>
+          </div>
+          <div class="container col-8 ml-0">
+            <h1 class="display-3 mt-2"><b>800 MHz Group</b></h1>
+            <hr />
+            <p class="display-4">RF Engineers and Contractors</p>
+          </div>
         </div>
-        <nav>
-            <ul class="horiz">
-                <li><a href="">text</a></li>
-                <li><a href="">text</a></li>
-                <li><a href="">text</a></li>
-                <li><a href="">text</a></li>
-            </ul>
-
-
-        </nav>
-
-    </header>
-
-    <main>
-
-        <div class="aside">
-
-            aside
-
-
-        </div>
-
-        <div class="content">
-
-            content
-
-
-
-        </div>
-
+      </div>
     </main>
 
-    <footer>
-        foot
-    </footer>
-
-    <script src="assets/js/PageControl.js"></script>
-</body>
+    <script src="assets\lib\bs\js\bootstrap.bundle.js"></script>
+  </body>
 </html>
